--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 
 <head>
   <title>Kanye Title</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel='stylesheet' href='index.css' />
   <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
@@ -13,27 +11,20 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand bar" href="index.html">Kanye Title</a>
+  <p class="navbar-brand bar">Kanye Title</p>
 </nav>
 
 <body>
 
   <div class='first'>
-    <p class='top'>
-      <br> <br> <i> "Figure out how to format this and change the font"</i>
+    <p id="quote" class='top'>
+      <br> <br> <i>Start Your Journey With Kanye. The Possibilites Are Endless</i>
     </p>
   </div>
 
   <div class='main responsive-main'>
-    <!-- <div class='content'>
-          <div class='large'>
-            <p>
-              Our Mission...
-            </p>
-          </div>
-      </div> -->
     <div class="content">
-        <button id="theButton" class="button" href="">
+        <button id="theButton" class="button" type="button" onclick="insertQuote()">
           <b>The Button</b>
         </button>
     </div>
