fix spacing and responsive design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Kanye Title</title>
+  <title>Kanye Rest</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel='stylesheet' href='index.css' />
   <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
@@ -10,7 +10,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <p class="navbar-brand bar">Kanye Title</p>
+  <p class="navbar-brand bar">Kanye Rest</p>
 </nav>
 
 <body>
@@ -27,7 +27,6 @@
           <b>The Button</b>
         </button>
     </div>
-
     <br>
     <div class='content'>
       <div class='small'>
