--- a/index.html
+++ b/index.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
   <title>Kanye Rest</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel='stylesheet' href='index.css' />
-  <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css"> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
 </head>
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <p class="navbar-brand bar">Kanye Rest</p>
-</nav>
+</nav> -->
 
 <body>
-
   <div class='first'>
-    <p id="quote" class='top'>
+    <p id="quote" class='top quoteFont'>
       <br> <br> <i>Start Your Journey With Kanye. The Possibilites Are Endless</i>
     </p>
+    <div class="button-block">
+      <button id="theButton" class="button" type="button" onclick="insertQuote()">
+        <b>New Wallpaper</b>
+      </button>
+    </div>
   </div>
 
   <div class='main responsive-main'>
-    <div class="content">
-        <button id="theButton" class="button" type="button" onclick="insertQuote()">
-          <b>The Button</b>
-        </button>
-    </div>
+    <!-- <div class="content">
+      <button id="theButton" class="button" type="button" onclick="insertQuote()">
+        <b>New Inspiration</b>
+      </button>
+  </div> -->
     <br>
     <div class='content'>
+      <br>
       <div class='small'>
-        <p>
-          Insert some weird description about the purpose of the website.
-        </p>
+        <h1>
+          Kanye West Inspiration
+        </h1>
         <br>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. In metus vulputate eu scelerisque felis imperdiet proin. Rhoncus urna neque viverra justo. Etiam
-          tempor orci eu lobortis elementum nibh tellus molestie. Arcu odio ut sem nulla pharetra diam sit. Semper quis
-          lectus nulla at volutpat diam ut venenatis tellus.
+          No further explanation needed.
         </p>
       </div>
       <br>
