responsive design fix

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <p>
           No further explanation needed.
         </p>
+        <br>
+        <p>
+          But seriously...when the fortune cookies just don't cut it, our inspiration sensei has us covered.
+          Click the button to receive a personalized Kanye West lockscreen that will motivate you even through your lamest of days.
+        </p>
+        <br>
       </div>
       <br>
     </div>
