--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
           Click the button to receive a personalized Kanye West lockscreen that will motivate you even through your lamest of days.
         </p>
         <br>
+        <p>
+          Created by Isaac Smith and Vivian Solgere.
+        </p>
+        <br>
       </div>
       <br>
     </div>
@@ -48,8 +52,10 @@
   <div class='footer'>
     <div class='footer-item'>
       <a target='_blank' href='https://github.com/OldZealand03/cs260-creative-project-2'>
-        <img height='50px' width='50px' src='images/GitHub-Mark-Light-120px-plus.png'>
+        <img height='45px' width='45px' src='images/GitHub-Mark-Light-120px-plus.png'>
       </a>
+      <p>
+      </p>
       <br>
     </div>
   </div>
